--- a/src/core/components/breadcrumbs/breadcrumbs.less
+++ b/src/core/components/breadcrumbs/breadcrumbs.less
@@ -9,10 +9,7 @@
   overflow: auto;
   white-space: nowrap;
   padding: var(--f7-breadcrumbs-padding);
-  &::-webkit-scrollbar {
-    display: none;
-    opacity: 0;
-  }
+  .no-scrollbar();
 }
 .breadcrumbs-separator,
 .breadcrumbs-item,
