--- a/src/core/components/text-editor/text-editor.less
+++ b/src/core/components/text-editor/text-editor.less
@@ -115,9 +115,7 @@ button.text-editor-button {
     justify-content: flex-start !important;
     overflow: auto;
     -webkit-overflow-scrolling: touch;
-    &::-webkit-scrollbar {
-      display: none;
-    }
+    .no-scrollbar();
     .text-editor-button-divider {
       height: 100%;
     }
