--- a/src/core/components/toolbar/toolbar.less
+++ b/src/core/components/toolbar/toolbar.less
@@ -193,13 +193,7 @@
   .toolbar-inner {
     justify-content: flex-start;
     .scrollable();
-    &::-webkit-scrollbar {
-      display: none !important;
-      width: 0 !important;
-      height: 0 !important;
-      -webkit-appearance: none;
-      opacity: 0 !important;
-    }
+    .no-scrollbar();
   }
   .tab-link,
   .link {
